--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     height:100vh;
 ">
 
-    <img src="tigr.jpg" alt="My Image" style="max-width:100%; max-height:100%;">
+    <img src="code.jpg" alt="My Image" style="max-width:100%; max-height:100%;">
 
 </body>
 </html>
